--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         bgMusic.loop = true; bgMusic.volume = 1.0;
 
         const loader = new THREE.TextureLoader();
-        const photoFiles = ['./image3.jpg', './image4.jpg', './image5.jpg', './image2.jpg', './image1.jpg', './image6.jpg', './image7.jpg', './image8.jpg'];
+        const photoFiles = ['./image3.jpg', './image4.jpg', './image5.jpg', './image2.jpg', './image1.jpg', './image6.jpg'];
         const photoTextures = [];
         photoFiles.forEach((f, i) => photoTextures[i] = loader.load(f));
 
@@ -322,7 +322,7 @@
             lCtx.font = 'bold 120px "Segoe UI", sans-serif';
             lCtx.fillStyle = '#FF69B4'; lCtx.textAlign = 'center';
             lCtx.shadowColor = "#FF1493"; lCtx.shadowBlur = 40; 
-            lCtx.fillText("ANH YÊU EM ❤", 512, 130);
+            lCtx.fillText("EM YÊU ANH ❤", 512, 130);
             const loveTex = new THREE.CanvasTexture(loveCanvas);
             const loveMat = new THREE.MeshBasicMaterial({ map: loveTex, transparent: true, blending: THREE.AdditiveBlending });
             loveMesh = new THREE.Mesh(new THREE.PlaneGeometry(70, 18), loveMat);
@@ -535,4 +535,5 @@
         });
     </script>
 </body>
+
 </html>
